--- a/data/io.github.qwertzuiopy.Questscribe.appdata.xml.in
+++ b/data/io.github.qwertzuiopy.Questscribe.appdata.xml.in
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <component type="desktop">
-	<id>de.egwagi.questscribev2.desktop</id>
+	<id>io.github.qwertzuiopy.Questscribe.desktop</id>
 	<metadata_license>CC0-1.0</metadata_license>
 	<project_license>GPL-3.0-or-later</project_license>
 	<description>
 	  <p>No description</p>
 	</description>
 </component>
+
